[metadata]
name = dbt_firebolt
version = attr: dbt.adapters.firebolt.__version__
description = The Firebolt adapter plugin for dbt (data build tool)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/firebolt-db/dbt-firebolt
author = Firebolt
author_email = support@firebolt.io
license = Apache-2.0
license_file = LICENSE
classifiers =
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
project_urls =
    Bug Tracker = https://github.com/firebolt-db/dbt-firebolt/issues

[options]
packages = find_namespace:
install_requires =
    firebolt-sdk>=0.4
python_requires = >=3.7
include_package_data = True
package_dir =
    = .

[options.packages.find]
where = .
include = dbt, dbt.*

[options.extras_require]
dev =
    mypy>=0.910
    pre-commit==2.15.0
    pytest==6.2.5
    pytest-dbt-adapter==0.6.0

[mypy]
disallow_untyped_defs = True
show_error_codes = True

[flake8]
max-line-length = 88
per-file-ignores = __init__.py:F401
ignore = E203, W503
ban-relative-imports = True
inline-quotes = '
