[metadata]
name = dbt_firebolt
version = attr: dbt.adapters.firebolt.__version__
description = The Firebolt adapter plugin for dbt (data build tool)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/firebolt-db/dbt-firebolt
author = Firebolt
author_email = support@firebolt.io
license = Apache-2.0
license_file = LICENSE
classifiers =
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
project_urls =
    Bug Tracker = https://github.com/firebolt-db/dbt-firebolt/issues

[options]
packages = find_namespace:
install_requires =
    dbt-core~=1.6,<1.7
    firebolt-sdk>=1.1.0
    pydantic>=0.23
python_requires = >=3.8
include_package_data = True
package_dir =
    = .

[options.packages.find]
where = .
include = dbt, dbt.*

[options.extras_require]
dev =
    allure-pytest==2.*
    dbt-tests-adapter~=1.6
    mypy==1.4.1
    pre-commit==2.15.0
    pytest==7.*

[black]
python-version = 3.9

[flake8]
max-line-length = 88
per-file-ignores = __init__.py:F401,Q000, test_utils.py:E501
ignore = E203, W503
ban-relative-imports = True
inline-quotes = '

[mypy]
plugins = pydantic.mypy
disallow_untyped_defs = True
show_error_codes = True
files = dbt/adapters
namespace_packages = True
explicit_package_bases = True

[mypy-agate]
ignore_missing_imports = True

[mypy-dbt.adapters.base.*]
ignore_missing_imports = True

[mypy-dbt.adapters.sql]
ignore_missing_imports = True

[mypy-dbt.contracts.*]
ignore_missing_imports = True

[mypy-dbt.dataclass_schema]
ignore_missing_imports = True

[mypy-dbt.exceptions]
ignore_missing_imports = True

[mypy-dbt.utils]
ignore_missing_imports = True

[pydantic-mypy]
warn_required_dynamic_aliases = True
warn_untyped_fields = True
